--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,13 @@
-# CircleCI 2.0 configuration file for Go.
+# Golang CircleCI 2.0 configuration file
 #
 # Check https://circleci.com/docs/2.0/language-go/ for more details
-version: 2.1
-
-orbs:
-  codecov: codecov/codecov@1.0.4
-
+version: 2
 jobs:
   build:
     docker:
+      # specify the version
       - image: circleci/golang:1.12
-
+    working_directory: /go/src/github.com/warmans/sqlite-memory
     steps:
       - checkout
       - run: go test -race -coverprofile=coverage.txt -covermode=atomic
